--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python = 3.8
   - pip
   - matplotlib
   - numpy
@@ -10,7 +11,8 @@ dependencies:
   - control
   - pydot
   - autopep8
-  - pytest=5.0.1
+  - pytest
+  - pylint
   - jupyterlab
   - ffmpeg
   - openh264
