another model/ plausible, not successful

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,6 @@ jit_tmp.c
 source.dot
 
 # Pytorch Net
-.pth
-python/test_system/quadrotor/trained_net/A2C_quadrotor.pth
-python/test_system/quadrotor/trained_net/dot product method/A2C_quadrotor.pth
+# .pth
+# python/test_system/quadrotor/trained_net/A2C_quadrotor.pth
+# python/test_system/quadrotor/trained_net/dot product method/A2C_quadrotor.pth
